--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,38 +2,38 @@
       <h2>Registro</h2>
       <hr class="w-30" />
 
-      <form >
+      <form action="/register/add" method="post" enctype="multipart/form-data">
         <div class="form-group row w-50 m-auto ">
           <div class="form-group col-12 col-sm-6 ">
-            <label>Email</label>
-            <input class="form-control m-auto mb-3" />
+            <label for="email">Email</label>
+            <input class="form-control m-auto mb-3" type="email" name="email" id="email" />
           </div>
           <div class="form-group col-12 col-sm-6">
-            <label>Nombre</label>
-            <input class="form-control m-auto mb-3" />
+            <label for="nombre">Nombre</label>
+            <input class="form-control m-auto mb-3" type="nombre" name="nombre" id="nombre"/>
           </div>
           <div class="form-group col-12 col-sm-6">
-            <label>Password</label>
+            <label for="password">Password</label>
             <input class="form-control m-auto mb-3" type="password" name="password" id="password" placeholder="Ej. ********" />
           </div>
           <div class="form-group col-12 col-sm-6">
-            <label>Repita la password</label>
+            <label for="confirm_password">Repita la password</label>
             <input class="form-control m-auto mb-3" type="password" name="confirm_password" id="confirm_password" placeholder="Ej. ********"/>
           </div>
           <div class="form-group col-12 col-sm-6">
-            <label>Años de experiencia</label>
-            <input class="form-control m-auto mb-3" />
+            <label for="anos_experiencia">Años de experiencia</label>
+            <input class="form-control m-auto mb-3" type="text" name="anos_experiencia" id="anos_experiencia" />
           </div>
           <div class="form-group col-12 col-sm-6">
-            <label>Especialidad</label>
-            <input class="form-control m-auto mb-3" />
+            <label for="especialidad">Especialidad</label>
+            <input class="form-control m-auto mb-3" type="text" name="especialidad" id="especialidad" />
           </div>
           <div class="form-group col-12 col-sm-12 mb-3">
-            <label>Foto de perfil</label>
-            <input type="file" />
+            <label for="image">Foto de perfil</label>
+            <input type="file" id="image" name="image" />
           </div>
         </div>
-        <button class="btn btn-outline-info mb-3">Registrarme</button>
+        <button class="btn btn-outline-info mb-3" type="submit">Registrarme</button>
         <p><a href="/login"> Iniciar sesión</a></p>
       </form>
     </div>
