--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,17 +3,28 @@
       <hr class="w-30" />
 
       <form action="/login" method="post">
+      <div>
+        {{#if errors}}
+        <div>
+            {{#each errors}}
+            <div class="alert alert-danger" role="alert">
+                {{this.msg}}
+            </div>
+            {{/each}}
+        </div>
+       {{/if}}
+    </div>
         <div class="form-group">
           <div class="form-group">
-            <label>Email</label>
-            <input class="form-control w-50 m-auto mb-3" />
+            <label for="email">Email</label>
+            <input class="form-control w-50 m-auto mb-3" value="{{old.email}}" id="email" name="email"/>
           </div>
           <div class="form-group">
-            <label>Password</label>
-            <input class="form-control w-50 m-auto mb-3" />
+            <label for="password">Password</label>
+            <input class="form-control w-50 m-auto mb-3" value="{{old.password}}" id="password" name="password"/>
           </div>
         </div>
-        <button class="btn btn-outline-success mb-3">Ingresar</button>
+        <button class="btn btn-outline-success mb-3" type="submit">Ingresar</button>
         <p>¿Aún no tienes cuenta? <a href="/register">Regístrate</a></p>
       </form>
     </div>
