--- a/views/register.hbs
+++ b/views/register.hbs
@@ -3,14 +3,25 @@
       <hr class="w-30" />
 
       <form action="/register/add" method="post" enctype="multipart/form-data">
+      <div>
+        {{#if errors}}
+        <div>
+            {{#each errors}}
+            <div class="alert alert-danger" role="alert">
+                {{this.msg}}
+            </div>
+            {{/each}}
+        </div>
+       {{/if}}
+    </div>
         <div class="form-group row w-50 m-auto ">
           <div class="form-group col-12 col-sm-6 ">
             <label for="email">Email</label>
-            <input class="form-control m-auto mb-3" type="email" name="email" id="email" />
+            <input class="form-control m-auto mb-3" type="email" name="email" id="email" value="{{old.email}}"/>
           </div>
           <div class="form-group col-12 col-sm-6">
             <label for="nombre">Nombre</label>
-            <input class="form-control m-auto mb-3" type="nombre" name="nombre" id="nombre"/>
+            <input class="form-control m-auto mb-3" type="nombre" name="nombre" id="nombre" value="{{old.nombre}}"/>
           </div>
           <div class="form-group col-12 col-sm-6">
             <label for="password">Password</label>
@@ -22,15 +33,15 @@
           </div>
           <div class="form-group col-12 col-sm-6">
             <label for="anos_experiencia">Años de experiencia</label>
-            <input class="form-control m-auto mb-3" type="text" name="anos_experiencia" id="anos_experiencia" />
+            <input class="form-control m-auto mb-3" type="text" name="anos_experiencia" id="anos_experiencia" value="{{old.anos_experiencia}}"/>
           </div>
           <div class="form-group col-12 col-sm-6">
             <label for="especialidad">Especialidad</label>
-            <input class="form-control m-auto mb-3" type="text" name="especialidad" id="especialidad" />
+            <input class="form-control m-auto mb-3" type="text" name="especialidad" id="especialidad" value="{{old.especialidad}}"/>
           </div>
           <div class="form-group col-12 col-sm-12 mb-3">
             <label for="image">Foto de perfil</label>
-            <input type="file" id="image" name="image" />
+            <input type="file" id="image" name="image" value="{{old.image}}"/>
           </div>
         </div>
         <button class="btn btn-outline-info mb-3" type="submit">Registrarme</button>
