--- a/views/participants.hbs
+++ b/views/participants.hbs
@@ -20,7 +20,7 @@
             {{#each skaters}}
               <tr>
                 <th scope="row">{{id}}</th>
-                <td><img src="{{foto}}" alt="{{foto}}"  width="20"></td>
+                <td><img src='..{{foto}}' alt="{{foto}}"  width="20"></td>
                 <td>{{nombre}}</td>
                 <td>{{anos_experiencia}}</td>
                 <td>{{especialidad}}</td>
