:sparkles: Correccion Menu html

--- a/views/participants.hbs
+++ b/views/participants.hbs
@@ -1,3 +1,4 @@
+<h1 class="text-center">Torneo Skate Santiago</h1>
 <div class="py-4 bg-dark text-white mt-3 transparentSquare rounded">
       <h2>Lista de participantes</h2>
 
