--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,13 +1,13 @@
 
 <nav class="navbar navbar-expand-lg bg-dark bg-menu">
   <div class="container">
-    <a class="navbar-brand text-white" href="/">Skate Park</a>
+    <a class="navbar-brand text-white" href="/participants">Skate Park</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link text-white" href="#">Home</a>
+        
         <a class="nav-link text-white" href="/login">Login</a>
         <a class="nav-link text-white" href="/register">Registrar</a>
         <a class="nav-link text-white" href="/participants">Participantes</a>
